Cancel event
